--- a/pos_backend/web/templates/login.html
+++ b/pos_backend/web/templates/login.html
@@ -1,51 +1,27 @@
+{% load static %}
 <!DOCTYPE html>
 <html class="no-js" lang="zxx">
 	<head>
-		<!-- Meta Tags -->
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="keywords" content="Site keywords here">
-		<meta name="description" content="#">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		
-		<!-- Site Title -->
-		<title>Sherah - HTML eCommerce Dashboard Template</title>
-
-		<!-- Font -->
-		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
-
-		<!-- Fav Icon -->
-		<link rel="icon" href="img/favicon.png">
-		
-		<!-- sherah Stylesheet -->
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/font-awesome-all.min.css">
-		<link rel="stylesheet" href="css/charts.min.css">
-		<link rel="stylesheet" href="css/datatables.min.css">
-		<link rel="stylesheet" href="css/jvector-map.css">
-		<link rel="stylesheet" href="css/slickslider.min.css">
-		<link rel="stylesheet" href="css/jquery-ui.css">
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="style.css">
+		{% include 'includes/head.html' %}
 		
 	</head>
 	<body id="sherah-dark-light">
 		
-			<section class="sherah-wc sherah-wc__full sherah-bg-cover" style="background-image: url('img/credential-bg.svg');">
+			<section class="sherah-wc sherah-wc__full sherah-bg-cover" style="background-image: url({% static 'img/credential-bg.svg' %});">
 				<div class="container-fluid p-0">
 					<div class="row g-0">
 						<div class="col-lg-6 col-md-6 col-12 sherah-wc-col-one">
-							<div class="sherah-wc__inner" style="background-image: url('img/welcome-bg.png');">
+							<div class="sherah-wc__inner" style="background-image: url({% static 'img/welcome-bg.png' %});">
 								<!-- Logo -->
 								<div class="sherah-wc__logo">
-									<a href="index.html"><img src="img/logo.png" alt="#"></a>
+									<a href="index.html"><img src="{% static 'img/logo.png' %}" alt="#"></a>
 								</div>
 								<!-- Middle Image -->
 								<div class="sherah-wc__middle">
-									<a href="index.html"><img src="img/welcome-vector.png" alt="#"></a>
+									<a href="index.html"><img src="{% static 'img/welcome-vector.png' %}" alt="#"></a>
 								</div>
 								<!-- Welcome Heading -->
-								<h2 class="sherah-wc__title">Welcome to Sherah eCommerce <br> Admin Panel</h2>
+								<h2 class="sherah-wc__title">SISTEMA DE PUNTO DE VENTA <br> Admin Panel</h2>
 							</div>
 						</div>
 						<div class="col-lg-6 col-md-6 col-12 sherah-wc-col-two">
@@ -53,11 +29,12 @@
 								<div class="sherah-wc__form-inner">
 									<h3 class="sherah-wc__form-title sherah-wc__form-title__one">Login Your Account <span>Please enter your email and password to continue</span></h3>
 									<!-- Sign in Form -->
-									<form class="sherah-wc__form-main p-0" action="index.html" method="post">
+									<form class="sherah-wc__form-main p-0" action="{% url 'web:loginusuario' %}" method="post">
+										{% csrf_token %}
 										<div class="form-group">
 											<label class="sherah-wc__form-label">Email Address</label>
 											<div class="form-group__input">
-												<input class="sherah-wc__form-input" type="email" name="email" placeholder="demo3243@gmail.com" required="required">
+												<input class="sherah-wc__form-input" type="text" name="username" placeholder="demo3243@gmail.com" required="required">
 											</div>
 										</div>
 										<!-- Form Group -->
@@ -90,6 +67,11 @@
 												
 											</div>
 										</div>
+										{% if msg_error != 'nn' %}
+											<div class="alert alert-danger" role="alert">
+												{{msg_error}}
+											</div>
+										{% endif %}
 										<!-- Form Group -->
 										<div class="form-group mg-top-20">
 											<div class="sherah-wc__bottom">
@@ -108,20 +90,7 @@
 		</div>
 		
 		<!-- sherah Scripts -->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery-migrate.js"></script>
-		<script src="js/popper.min.js"></script>
-		<script src="js/jquery-ui.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/charts.js"></script>
-		<script src="js/final-countdown.min.js"></script>
-		<script src="js/fancy-box.min.js"></script>
-		<script src="js/fullcalendar.min.js"></script>
-		<script src="js/datatables.min.js"></script> 
-		<script src="js/circle-progress.min.js"></script>
-		<script src="js/jquery-jvectormap.js"></script>
-		<script src="js/jvector-map.js"></script>
-		<script src="js/main.js"></script>
+		{% include 'includes/scripts.html' %}
 		
 	</body>
 </html>
